
[v1.1.1p6b]
 - API: The new interface DockActionImportanceOrder allows to define which actions are the most important actions, if there is not enough space to show all actions the most important actions stay visible a bit longer
 - API: If tabs and actions are shown, tabs are now hidden before actions are hidden
 - Bugfix: When setting the location of a Dockable "d", such that a SplitDockStation with a maximixed child needs to de-maximize its child, and if that child is a StackDockStation containing "d", and all of this is executed by a CSplitDockStationHandle: then remove "d" from its parent before resizing. Because this way the EventQueue is cleaned before AWTEvents regarding "d" are sent, allowing new Component-resize events to be actually delivered.
 - Bugfix: Removing a DockAction from a submenu did not have any effect unless the submenu was rebuilt.
 - Bugfix: A nested DropDownAction could lead to a NPE during "unbind". 
 - Bugfix/API: merged changes of Thomas. SplitDockStation should clean up wrong mouse cursor now. Improvements in the Glass-Extension.
  
[v1.1.1pToolbar]
 - API: New Inserter can override drop operations before and after they are created
 - API: A lot more configuration options for the ScreenDockStation, these configurations are done by the ScreenDockWindowConfiguration.
 ! API: PaintableComponent uses now a transparency enumeration instead of two booleans 
 - API: ScreenDockWindows can be transparent
 - API: AbstractDockTitle has been divided into two classes, there is no need to change code in the subclasses of AbstractDockTitle
 ! API: DockActions now support icons that are shown if the mouse hovers of the action, or if the mouse is pressed. Clients just using the DockAction interface should compile without changes, but subclasses of DockAction will require updates.

[Todo]
- Drop StackDockStation over Dockable and merge them