@@ -1,0 +1,87 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+
+<project name="toolbar" default="default" basedir="../">
+	<import file="../docking-frames-core/build.xml"/>
+	
+	<target name="default" depends="source, bin, doc">
+		<delete>
+			<fileset dir="${toolbar.temp}"/>
+		</delete>
+	</target>
+
+	<target name="paths" depends="dock.paths">
+		<property name="toolbar.base" value="toolbar"/>
+		<property name="toolbar.source" value="${toolbar.base}/src"/>
+		<property name="toolbar.bin" value="${toolbar.base}/bin"/>
+		<property name="toolbar.temp" value="${toolbar.base}/temp"/>
+		<property name="toolbar.doc" value="${toolbar.base}/doc"/>
+
+		<property name="name.toolbar" value="docking-frames-ext-toolbar"/>
+		
+		<property name="location.toolbar" value="docking-frames-ext-toolbar"/>
+	</target>
+	
+	<target name="doc" depends="source, paths, dock.paths">
+		<mkdir dir="${toolbar.doc}/${name.toolbar}"/>
+		<javadoc destdir="${toolbar.doc}/${name.toolbar}" use="true" splitindex="true" useexternalfile="true">
+			<fileset dir="${toolbar.source}/${name.toolbar}">
+				<include name="**/*.java"/>
+			</fileset>
+			<classpath path="${bin}/${name.common}.jar"/>
+			<classpath path="${bin}/${name.core}.jar"/>
+			<link href="http://java.sun.com/j2se/1.5.0/docs/api/"/>
+			<link href="${doc}/${name.common}"/>
+		</javadoc>
+	</target>
+	
+	<target name="bin" depends="source, bin.dir, bin.toolbar, paths">
+		<jar destfile="${toolbar.bin}/${name.toolbar}.jar">
+			<fileset dir="${toolbar.temp}/${name.toolbar}"/>
+			<manifest>
+				<attribute name="Class-Path" value="${name.core}.jar"/>
+			</manifest>
+		</jar>
+	</target>
+
+	<!-- Compiling -->
+	<target name="bin.toolbar" depends="source, bin.dir">
+		<javac srcdir="${toolbar.source}/${name.toolbar}" destdir="${toolbar.temp}/${name.toolbar}">
+			<classpath path="${bin}/${name.core}.jar"/>
+		</javac>
+		<copy todir="${toolbar.temp}/${name.toolbar}">
+			<fileset dir="${toolbar.source}/${name.toolbar}">
+				<exclude name="**/*.java" />
+			</fileset>
+		</copy>
+	</target>
+	
+	<!-- Paths -->
+	<target name="bin.dir" depends="clean, paths">
+		<mkdir dir="${toolbar.base}"/>
+		<mkdir dir="${toolbar.bin}"/>
+		<mkdir dir="${toolbar.temp}"/>
+		<mkdir dir="${toolbar.temp}/${name.toolbar}"/>
+	</target>
+
+	<!-- copy source -->
+	<target name="source" depends="source dir, clean, paths">
+		<copy todir="${toolbar.source}/${name.toolbar}">
+			<fileset dir="${location.toolbar}/src">
+				<exclude name="*.svn/*"/>
+			</fileset>
+		</copy>
+	</target>
+
+	<!-- paths source -->
+	<target name="source dir" depends="clean, paths">
+		<mkdir dir="${toolbar.base}"/>
+		<mkdir dir="${toolbar.source}"/>
+		<mkdir dir="${toolbar.source}/${name.toolbar}"/>
+	</target>
+
+
+	<target name="clean" depends="paths">
+		<delete dir="${toolbar.base}"/>
+	</target>
+</project>
