@@ -682,6 +682,7 @@
  - API: ScreenDockWindows can be transparent
  - API: AbstractDockTitle has been divided into two classes, there is no need to change code in the subclasses of AbstractDockTitle
  ! API: DockActions now support icons that are shown if the mouse hovers of the action, or if the mouse is pressed. Clients just using the DockAction interface should compile without changes, but subclasses of DockAction will require updates.
-
+ - API: The window that shows up when moving a dockable (DefaultDockRelocator.ImageWindow) is now transparent
+ 
 [Todo]
 - Drop StackDockStation over Dockable and merge them
